--- a/sim_ws/src/localization/config/local_filter.yaml
+++ b/sim_ws/src/localization/config/local_filter.yaml
@@ -10,7 +10,7 @@ ekf_velocity:
 
         transform_timeout: 0.0
 
-        print_diagnostics: false
+        print_diagnostics: true
 
         debug: false
 
@@ -18,7 +18,7 @@ ekf_velocity:
 
         permit_corrected_publication: false
 
-        publish_acceleration: false
+        publish_acceleration: true
 
         publish_tf: true
 
@@ -35,7 +35,7 @@ ekf_velocity:
                        false, false, true,
                        false, false, false]
 
-        odom0_queue_size: 20
+        odom0_queue_size: 2
 
         odom0_differential: false
 
@@ -68,30 +68,20 @@ ekf_velocity:
                         0.0,   0.0,   0.0,
                         0.0,   0.0,   0.0]
 
-        use_control: false
+        use_control: true
 
-        # Whether the input (assumed to be cmd_vel) is a geometry_msgs/Twist or geometry_msgs/TwistStamped message. Defaults to
-        # false.
         stamped_control: false
 
-        # The last issued control command will be used in prediction for this period. Defaults to 0.2.
         control_timeout: 0.2
 
-        # Which velocities are being controlled. Order is vx, vy, vz, vroll, vpitch, vyaw.
         control_config: [true, true, false, false, false, true]
 
-        # Places limits on how large the acceleration term will be. Should match your robot's kinematics.
         acceleration_limits: [1.3, 0.0, 0.0, 0.0, 0.0, 3.4]
 
-        # Acceleration and deceleration limits are not always the same for robots.
         deceleration_limits: [1.3, 0.0, 0.0, 0.0, 0.0, 4.5]
 
-        # If your robot cannot instantaneously reach its acceleration limit, the permitted change can be controlled with these
-        # gains
         acceleration_gains: [0.8, 0.0, 0.0, 0.0, 0.0, 0.9]
 
-        # If your robot cannot instantaneously reach its deceleration limit, the permitted change can be controlled with these
-        # gains
         deceleration_gains: [1.0, 0.0, 0.0, 0.0, 0.0, 1.0]
 
         process_noise_covariance: [0.05, 0.0,    0.0,    0.0,    0.0,    0.0,    0.0,     0.0,     0.0,    0.0,    0.0,    0.0,    0.0,    0.0,    0.0,
