--- a/sim_ws/src/localization/config/local_filter.yaml
+++ b/sim_ws/src/localization/config/local_filter.yaml
@@ -48,21 +48,21 @@ ekf_velocity:
         odom0_pose_rejection_threshold: 5.0
         odom0_twist_rejection_threshold: 5.0
 
-        # imu0: /imu
-        # imu0_config: [false, false, false,
-        #               false, false, false,
-        #               false, false, false,
-        #               false, false, true,
-        #               true,  true,  false]
-        # imu0_queue_size: 100
-        # imu0_differential: false
-        # imu0_relative: false
-        # imu0_nodelay: true
+        imu0: /imu
+        imu0_config: [false, false, false,
+                      false, false, false,
+                      false, false, false,
+                      false, false, true,
+                      true,  true,  false]
+        imu0_queue_size: 10
+        imu0_differential: false
+        imu0_relative: false
+        imu0_nodelay: true
 
-        # imu0_twist_rejection_threshold: 1000000000000.0
-        # imu0_linear_acceleration_rejection_threshold: 1000000000000.0
+        imu0_twist_rejection_threshold: 10.0
+        imu0_linear_acceleration_rejection_threshold: 10.0
 
-        # imu0_remove_gravitational_acceleration: false
+        imu0_remove_gravitational_acceleration: false
 
         initial_state: [0.0,  0.0,  0.0,
                         0.0,   0.0,   0.0,
