--- a/sim_ws/src/localization/config/local_filter.yaml
+++ b/sim_ws/src/localization/config/local_filter.yaml
@@ -31,8 +31,8 @@ ekf_velocity:
 
         odom0: /odom
 
-        odom0_config: [true,  true,  false,
-                       false, false, true,
+        odom0_config: [false,  false,  false,
+                       false, false, false,
                        true, true, false,
                        false, false, true,
                        false, false, false]
